--- a/src/components/config-form/ConfigForm.css
+++ b/src/components/config-form/ConfigForm.css
@@ -22,7 +22,7 @@ input {
   font-size: 1em;
 }
 
-button {
+.primary {
   padding: 10px;
   background-color: #007bff;
   color: white;
@@ -30,6 +30,17 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.primary:hover {
   background-color: #0056b3;
+}
+
+.icon-button {
+  padding: 4px;
+  background-color: transparent;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.icon-button:hover {
+  border: 1px solid #007bff;
 }
