--- a/src/components/folder-tree/FolderTree.css
+++ b/src/components/folder-tree/FolderTree.css
@@ -1,8 +1,4 @@
 .left-navigation {
-  width: 350px;
-  background-color: #f4f4f4;
-  border-right: 1px solid #ddd;
-
   button {
     display: flex;
     background-color: transparent;
@@ -11,6 +7,7 @@
   }
 
   .active {
-    background-color: #bfbebe;
+    font-weight: 800;
+    text-decoration-line: underline;
   }
 }
