--- a/src/components/main-view/MainView.css
+++ b/src/components/main-view/MainView.css
@@ -46,3 +46,31 @@
   flex-grow: 1;
   text-align: center;
 }
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  padding: 10px;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown-button {
+  background-color: transparent;
+}
+.dropdown-button:hover {
+  background-color: #fcfafa;
+}
